--- a/public/css/common.css
+++ b/public/css/common.css
@@ -7,7 +7,8 @@ a {
   text-decoration: none;
   color: #000;
 }
-
+#root{height: 100%;}
+.wrapper{height: 100%;}
 #main{ height: 100%; display: flex; flex-direction:column;}
 #content{ flex:1; overflow:auto; padding-bottom: 50px; position: relative; display: flex; flex-direction:column;}
 
