--- a/src/views/movie/index.css
+++ b/src/views/movie/index.css
@@ -1,12 +1,13 @@
 #content .movie_menu{ width: 100%; height: 45px; border-bottom:1px solid #e6e6e6; display: flex; justify-content:space-between; align-items:center; background:white; z-index:10;}
 .movie_menu .city_name{ margin-left: 20px; height:100%; line-height: 45px;overflow: hidden;}
-.movie_menu .city_name.active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
-.movie_menu .city_name.router-link-active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+.movie_menu  a.active .city_name{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+
 .movie_menu .hot_swtich{ display: flex;flex: 1; height:100%; line-height: 45px;}
-.movie_menu .hot_item{flex: 1; font-size: 15px; color:#666; width:80px; text-align:center; margin:0 12px; font-weight:700;}
-.movie_menu .hot_item.active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
-.movie_menu .hot_item.router-link-active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+.movie_menu .hot_swtich a {flex: 1;}
+.movie_menu .hot_item{font-size: 15px; color:#666; width:80px; text-align:center; margin:0 12px; font-weight:700;}
+.movie_menu a.active .hot_item{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+
 .movie_menu .search_entry{ margin-right:20px; height:100%; line-height: 45px;}
-.movie_menu .search_entry.active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
-.movie_menu .search_entry.router-link-active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+.movie_menu a.active .search_entry{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
+
 .movie_menu .search_entry i{  font-size:24px; color:red;}
