--- a/src/component/nowPlaying/index.css
+++ b/src/component/nowPlaying/index.css
@@ -1,5 +1,8 @@
+.scrollX{
+  overflow: hidden;
+}
 #content .movie_body {
-    flex: 1;
+    float: left;
     overflow: auto;
   }
   .movie_body ul {
