--- a/src/component/tabbar/index.css
+++ b/src/component/tabbar/index.css
@@ -4,4 +4,4 @@
 #footer ul li a.active{ color: #f03d37;}
 #footer ul li a{display: block;}
 #footer ul i{ font-size: 20px;}
-#footer ul p{ font-size: 12px; line-height: 18px;}
+#footer ul p{ font-size: 12px; line-height: 18px;color: #333333;}
