--- a/src/views/movie/index.css
+++ b/src/views/movie/index.css
@@ -10,3 +10,4 @@
 .movie_menu .search_entry.active{ color: #ef4238; border-bottom: 2px #ef4238 solid;}
 
 .movie_menu .search_entry i{  font-size:24px; color:red;}
+.movie-box{height: 100%;}
