--- a/public/css/common.css
+++ b/public/css/common.css
@@ -22,73 +22,75 @@ a {
 #footer ul li.router-link-active{ color: #f03d37;}
 #footer ul i{ font-size: 20px;}
 #footer ul p{ font-size: 12px; line-height: 18px;}
-.loader {
-    position: relative;
-    width: 2.5em;
-    height: 2.5em;
-    transform: rotate(165deg);
-  }
-  .loader:before, .loader:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: 0.5em;
-    height: 0.5em;
-    border-radius: 0.25em;
-    transform: translate(-50%, -50%);
-  }
-  .loader:before {
-    animation: before 2s infinite;
-  }
-  .loader:after {
-    animation: after 2s infinite;
-  }
-  
-  @keyframes before {
-    0% {
-      width: 0.5em;
-      box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-    35% {
-      width: 2.5em;
-      box-shadow: 0 -0.5em rgba(225, 20, 98, 0.75), 0 0.5em rgba(111, 202, 220, 0.75);
-    }
-    70% {
-      width: 0.5em;
-      box-shadow: -1em -0.5em rgba(225, 20, 98, 0.75), 1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-    100% {
-      box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-  }
-  @keyframes after {
-    0% {
-      height: 0.5em;
-      box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
-    }
-    35% {
-      height: 2.5em;
-      box-shadow: 0.5em 0 rgba(61, 184, 143, 0.75), -0.5em 0 rgba(233, 169, 32, 0.75);
-    }
-    70% {
-      height: 0.5em;
-      box-shadow: 0.5em -1em rgba(61, 184, 143, 0.75), -0.5em 1em rgba(233, 169, 32, 0.75);
-    }
-    100% {
-      box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
-    }
-  }
-  html,
-  body {
-    height: 100%;
-  }
-  
-  .loader {
+.loadEffect{
+    width: 50px;
+    height: 50px;
     position: fixed;
-    top: calc(50% - 1.25em);
-    left: calc(50% - 1.25em);
-  }
+    top: calc(50% - 25px);
+    left: calc(50% - 25px);
+}
+.loadEffect span{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: lightgreen;
+    position: absolute;
+    animation: load 1.04s ease infinite;
+}
+@keyframes load{
+    0%{
+        -webkit-transform: scale(1.2);
+        opacity: 1;
+    }
+    100%{
+        -webkit-transform: scale(.3);
+        opacity: 0.5;
+    }
+}
+.loadEffect span:nth-child(1){
+    left: 0;
+    top: 50%;
+    margin-top:-5px;
+    animation-delay:0.13s;
+}
+.loadEffect span:nth-child(2){
+    left: 7px;
+    top: 7px;
+    animation-delay:0.26s;
+}
+.loadEffect span:nth-child(3){
+    left: 50%;
+    top: 0;
+    margin-left: -5px;
+    animation-delay:0.39s;
+}
+.loadEffect span:nth-child(4){
+    top: 7px;
+    right:7px;
+    animation-delay:0.52s;
+}
+.loadEffect span:nth-child(5){
+    right: 0;
+    top: 50%;
+    margin-top:-5px;
+    animation-delay:0.65s;
+}
+.loadEffect span:nth-child(6){
+    right: 7px;
+    bottom:7px;
+    animation-delay:0.78s;
+}
+.loadEffect span:nth-child(7){
+    bottom: 0;
+    left: 50%;
+    margin-left: -5px;
+    animation-delay:0.91s;
+}
+.loadEffect span:nth-child(8){
+    bottom: 7px;
+    left: 7px;
+    animation-delay:1.04s;
+}
   
 
