--- a/public/css/common.css
+++ b/public/css/common.css
@@ -22,12 +22,19 @@ a {
 #footer ul li.router-link-active{ color: #f03d37;}
 #footer ul i{ font-size: 20px;}
 #footer ul p{ font-size: 12px; line-height: 18px;}
-.loadEffect{
-    width: 50px;
-    height: 50px;
+.load-fix{
     position: fixed;
     top: calc(50% - 25px);
     left: calc(50% - 25px);
+}
+.load-relative{
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.loadEffect{
+    width: 50px;
+    height: 50px;
 }
 .loadEffect span{
     display: inline-block;
